# llabs-templates-python-library

{{cookiecutter.project_slug}}/: pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  release.yml
